--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "flake8",
+    "black",
+    "isort",
+    "autoflake"
 ]
 
 [project.urls]
