--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,19 @@ authors = [
 description = "A tool to resolve requirements conflicts between n requirements files."
 readme = "README.md"
 requires-python = ">=3.8"
+keywords = ["requirements", "dependencies", "resolver", "conflicts", "pip", "packaging"]
 classifiers = [
-    "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Topic :: Software Development :: Build Tools",
     "Environment :: X11 Applications :: GTK",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    # Declare support for the PyPy interpreter
+    "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
     "requests",
