--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: pip
+          cache: 'pip'
 
-      - name: Install system dependencies
+      - name: Install system dependencies for Tkinter
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-tk
@@ -41,10 +41,6 @@ jobs:
 
       - name: Run tests
         run: |
-          # If your Makefile already created a venv in ./venv, use it:
-          if [ -d venv ]; then
-            ./venv/bin/python -m unittest discover tests
-          else
-            # fallback to system/python from setup-python
-            python -m unittest discover tests
-          fi
+          # Activate the virtual environment created by 'make setup' and run tests
+          source venv/bin/activate
+          python -m unittest discover tests
