--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -12,6 +12,8 @@ jobs:
   release-build:
     name: Build Release Distributions
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Grant permission to write to the release
     
     steps:
     - name: Checkout code
@@ -55,7 +57,7 @@ jobs:
     # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment
     environment:
       name: pypi
-      url: https://pypi.org/p/requirements-resolver # Corrected the package name
+      url: https://pypi.org/p/requirements-resolver
 
     steps:
       - name: Retrieve release distributions from build job
