--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x' # Use latest stable Python 3.x
+        python-version: '3.12' # Use specific Python version
 
     - name: Install build dependencies
       run: |
